<resources>
    <string name="app_name">ScreenDesign1</string>
    <string name="main_title_text">Choose your area</string>
    <string name="home_menu">Home</string>
    <string name="feed_menu">Feed</string>
    <string name="chat_menu">Chat</string>
    <string name="search_menu">Search</string>
    <string name="profile_menu">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>