<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_home_foreground"
        android:title="@string/home_menu"
        />
    <item
        android:id="@+id/feed"
        android:icon="@drawable/ic_feed_foreground"
        android:title="@string/feed_menu" />
    <item
        android:id="@+id/chat"
        android:icon="@drawable/ic_chat_foreground"
        android:title="@string/chat_menu" />
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search_foreground"
        android:title="@string/search_menu" />
    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_profile_foreground"
        android:title="@string/profile_menu" />
</menu>